@startuml
abstract class GameState {
}
class RHGameState {
    - <<const>> maxPieces : int = 16
    + BoardWidth : int <<get>>
    + BoardHeight : int <<get>>
    - <<readonly>> _hashCode : int
    + RHGameState(placedPieces:PlacedRHPiece[])
    + IsSolved() : bool
    + <<override>> GetHashCode() : int
    - CalculateHashCode() : int
    + <<override>> Equals(obj:object?) : bool
    + GetPossibleMoves() : IEnumerable<Move>
    + WithMove(move:Move) : RHGameState
    + PrintState() : void
}
abstract class Heuristic {
    + {abstract} Evaluate(state:RHGameState) : int
}
abstract class NonNegiativeHeuristic {
}
abstract class AdmissibleHeuristic {
}
abstract class MonotoneHeuristic {
}
class DistanceHeuristic {
    + <<override>> Evaluate(state:RHGameState) : int
}
class FreeSpacesHeuristic {
    + <<override>> Evaluate(state:RHGameState) : int
}
class MoverHeuristic {
    + <<override>> Evaluate(state:RHGameState) : int
}
class Levels <<static>> {
    + {static} LoadLevel(index:int) : (string, RHGameState)
    + {static} GetPiece(lvlS:string[], c:char, i:int, j:int) : PlacedRHPiece
    + {static} GetChar(lvlS:string[], i:int, j:int, d:Direction, tiles:int) : char?
}
struct Move {
    + PieceIndex : int <<get>> <<init>>
}
enum Direction {
    Right,
    Down,
    Left,
    Up,
}
class DirectionMethods <<static>> {
    + {static} GetOpposite(d:Direction) : Direction
}
class StateMove {
    - _hashCode : int
    + StateMove(from:RHGameState, to:RHGameState, move:Move)
    - CalculateHashCode() : int
    + <<override>> GetHashCode() : int
    + <<override>> Equals(obj:object?) : bool
}
struct PathChangeArgs {
    + onPath : bool
}
class PlacedRHPiece {
    + PlacedRHPiece(piece:RushHourPiece, position:Vector2I, facingDirection:Direction)
    + WithMove(dir:Direction) : PlacedRHPiece
}
abstract class Piece {
    + {abstract} Width : int <<get>>
    + {abstract} Length : int <<get>>
    + {abstract} CanMoveLengthwise : bool <<get>>
    + {abstract} CanMoveSideways : bool <<get>>
}
abstract class RushHourPiece {
    + <<override>> CanMoveLengthwise : bool <<get>>
    + <<override>> CanMoveSideways : bool <<get>>
}
class Car {
    + <<override>> Length : int <<get>>
    + <<override>> Width : int <<get>>
}
class MainCar {
}
class Bus {
    + <<override>> Length : int <<get>>
    + <<override>> Width : int <<get>>
}
abstract class Solver {
    # randomFactor : float
    # rand : Random
    +  <<event>> NewCurrent : EventHandler<RHGameState>? 
    +  <<event>> PathChange : EventHandler<PathChangeArgs>? 
    +  <<event>> DiscoveredEdges : EventHandler<IEnumerable<StateMove>>? 
    +  <<event>> NewEdge : EventHandler<StateMove>? 
    # OnNewCurrent(state:RHGameState) : void
    # OnPathChange(args:PathChangeArgs) : void
    # OnDiscoveredEdges(edges:IEnumerable<StateMove>) : void
    # OnNewEdge(edge:StateMove) : void
    + Solver(heuristic:Heuristic, randomFactor:float)
    + Evaluate(move:StateMove) : float
    + Evaluate(state:RHGameState) : float
    + <<virtual>> Start(initial:RHGameState) : void
    + Extend(state:RHGameState) : bool
    + {abstract} ProcessMoves(stateMoves:IEnumerable<StateMove>) : IEnumerable<StateMove>
    + {abstract} Step() : void
    + {abstract} GetSolutionPath() : IEnumerable<StateMove>
}
class TabuSolver {
    + TabuSize : int <<get>> <<init>>
    + nextMove : StateMove?
    + TabuSolver(h:Heuristic, tabuSize:int, rf:float)
    # Route : List<RHGameState>
    + <<override>> Start(initial:RHGameState) : void
    + <<override>> ProcessMoves(stateMoves:IEnumerable<StateMove>) : IEnumerable<StateMove>
    + <<override>> Step() : void
    + <<override>> GetSolutionPath() : List<StateMove>
}
class BacktrackingSolver {
    # CurrentRoute : List<StateMove>
    + <<override>> ProcessMoves(stateMoves:IEnumerable<StateMove>) : IEnumerable<StateMove>
    + <<override>> Step() : void
    + <<override>> GetSolutionPath() : IEnumerable<StateMove>
}
class AcGraphSolver {
    # OpenStates : PriorityQueue<StateMove,float> 
    # DiscoveredStates : Dictionary<RHGameState,DiscoveredState>
    + <<override>> Start(initial:RHGameState) : void
    + <<override>> Step() : void
    + <<override>> ProcessMoves(stateMoves:IEnumerable<StateMove>) : IEnumerable<StateMove>
    + EvalWithDepth(depth:int, state:RHGameState) : float
    + <<override>> GetSolutionPath() : IEnumerable<StateMove>
}
enum SolverStatus {
    NotStarted,
    Running,
    Solved,
    NoSolution,
    Terminated,
}
struct DiscoveredState {
    + depth : int
    + parent : RHGameState?
}
GameState <|-- RHGameState
RHGameState --> "+ ExitPosition" Vector2I
Heuristic <|-left- NonNegiativeHeuristic
NonNegiativeHeuristic <|-down- AdmissibleHeuristic
AdmissibleHeuristic <|-- MonotoneHeuristic
MonotoneHeuristic <|-- DistanceHeuristic
MonotoneHeuristic <|-- FreeSpacesHeuristic
MonotoneHeuristic <|-- MoverHeuristic
Move --> "+ Dir" Direction
StateMove --> "+ From" RHGameState
StateMove --> "+ To" RHGameState
StateMove --> "+ Move" Move
PathChangeArgs --> "move" StateMove
PlacedRHPiece --> "+ Piece" RushHourPiece
PlacedRHPiece --> "+ Position" Vector2I
PlacedRHPiece --> "+ FacingDirection" Direction
Piece <|-- RushHourPiece
RushHourPiece <|-- Car
Car <|-- MainCar
RushHourPiece <|-- Bus
Solver o-> "+ Status" SolverStatus
Solver o-left-> "+ Heuristic" Heuristic
Solver <|-down- TabuSolver
Solver <|-down- BacktrackingSolver
Solver <|-down- AcGraphSolver
AcGraphSolver <-- DiscoveredState
@enduml
